2011-01-20  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: Added ".mk3d" to the list of known file name
	extensions for Matroska files.

	* mkvmerge, mmg: enhancement: Updated the "stereo mode" parameter
	to match the current Matroska specifications.

2010-12-26  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: If mkvmerge encounters invalid UTF-8
	strings in certain files or command line arguments then those
	strings will simply be cut short. Before mkvmerge was exiting with
	an error ("Invalid UTF-8 sequence encountered").

	* all: new feature: Added online update checks. The command line
	tools know a new parameter "--check-for-updates". mmg has a new
	menu entry ("Help" -> "Check for updates") and checks
	automatically when it starts, but at most once in 24 hours. Can be
	turned off in the preferences. This function requires libcurl and
	is not built if libcurl is not available.

2010-12-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Avoid a crash due to invalid memory access if
	a source file name contains numbers (happens only if mkvtoolnix is
	built with MS Visual Studio). Fix for bug 585.

2010-12-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Added support for reading VP8 video from
	Ogg files. Implements bug 584.

	* mkvextract: enhancement: mkvextract will exit with an error if
	the user specifies track IDs that do not exist in the source
	file. This works in the "tracks" and "timecodes_v2" extraction
	modes. Fix for bug 583.

	* docs: mkvextract's man page has been updated to match the
	program's expected command line syntax for the "timecodes_v2"
	mode. Fix for bug 583.

2010-12-20  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Fixed building the Qt version of mkvinfo's
	GUI. Fix for bug 576.

	* mkvmerge, mmg: bug fix: Option files could not contain options
	that started with '#' as they were interpreted as comment lines.

2010-11-15  Moritz Bunkus  <moritz@bunkus.org>
